Bug 135059 - export to multiple plateforms problem (not correctly generated)